# windstow

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
app/src/: App.tsx  tauri.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/components/: Nav.tsx  Progress.tsx
app/src/ipc/: commands.ts
app/src/pages/: ColdData.tsx  Dashboard.tsx  Duplicates.tsx  Plan.tsx  Reports.tsx
core/: Cargo.toml
core/src/: lib.rs  scan.rs
src/: lib.rs
tests/: core_scan_test.rs
