[package]
name = "winstow-app"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core = { path = "../../core" }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
